# xmcp

./: .env.example  .gitignore  pyproject.toml  start.py
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.4-MILESTONE-AUDIT.md  v1.4-REQUIREMENTS.md  v1.4-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK-v1.3.md  STACK-v1.4.md  STACK.md  SUMMARY.md
chat_app/: __init__.py  app.py  auth.py  chat.py  config.py  context_mgr.py  conversations.py  db.py  feedback.py  graph_client.py  mcp_client.py  openai_client.py  schema.sql  secrets.py
docs/: ADMIN-GUIDE.md  DEPLOYMENT.md  USER-GUIDE.md
exchange_mcp/: __init__.py  dns_utils.py  exchange_client.py  feedback_analytics.py  ps_runner.py  server.py  tools.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend_dist/: index.html
scripts/: verify_dns.py  verify_exchange.py
tests/: test_dns_utils.py  test_exchange_client.py  test_graph_client.py  test_integration.py  test_ps_runner.py  test_server.py  test_tool_descriptions.py  test_tools_dag.py  test_tools_flow.py  test_tools_hybrid.py  test_tools_mailbox.py  test_tools_security.py
(+294 files in other folders)
