[project]
name = "exchange-mcp"
version = "0.1.0"
description = "Exchange Online MCP server for Marsh McLennan"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.8.0",
    "mcp>=1.0.0",
    "flask>=3.0",
    "waitress>=3.0",
    "msal>=1.35.1",
    "openai>=2.29.0",
    "tiktoken>=0.12.0",
    "flask-session>=0.8.0",
    "boto3>=1.42.73",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["exchange_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "network: marks tests that require live DNS/network access",
    "exchange: marks tests that require live Exchange Online credentials (AZURE_CERT_THUMBPRINT, AZURE_CLIENT_ID, AZURE_TENANT_DOMAIN)",
]
